# jellybean

./: .gitignore  Cargo.toml  README.md
examples/bat/: Cargo.toml
examples/bat/src/: main.rs
examples/cached/: Cargo.toml
examples/cached/src/: main.rs
examples/html/: Cargo.toml
examples/html/src/: main.rs  theme.css
lib/: Cargo.toml  build.rs
lib/artifacts/: languages.csv
lib/shared/: language.rs  util.rs
lib/src/: capture.rs  doc.rs  dumps.rs  highlight_set.rs  highlighter.rs  language.rs  languages.rs  lib.rs  theme.rs  util.rs
lib/tests/: validation.rs
packs/_template/: Cargo.toml  build.rs
packs/_template/src/: lib.rs
shared/: language.rs  util.rs
xtask/: Cargo.toml  artifacts  languages.csv
xtask/src/: clean.rs  expand.rs  fetch.rs  main.rs  package.rs  sync.rs  sync_features.rs  util.rs
