[package]
name = "jellybean-pack-template"
version = "0.0.2"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2021"
documentation = "https://docs.rs/jellybean"
description = "Sweet syntax highlighting with tree-sitter."
repository = "https://github.com/SergioBenitez/jellybean"
readme = "../../README.md"
keywords = ["syntax", "highlighting", "colors", "tree-sitter", "highlight"]
license = "MIT OR Apache-2.0"
categories = ["text-processing"]
publish = false

[features]

[dependencies.tree-sitter]
version = "0.20"
package = "jellybean-tree-sitter"

[build-dependencies]
zstd = "0.12"
tar = "0.4"
rayon = "1.7"
serde_json = "1"
cc = "1"
